--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
 <p>浏览器通常会在 q 元素周围包围引号。</p>
 
 <p>WWF 的目标是 <q>构建人与自然和谐相处的世界。</q></p>
-
+<table border="1">
+<tr>
+<td>row 1, cell 1</td>
+<td>row 1, cell 2</td>
+</tr>
+<tr>
+<td>row 2, cell 1</td>
+<td>row 2, cell 2</td>
+</tr>
+</table>
 </body>
 </html>
